--- a/package.json
+++ b/package.json
@@ -20,11 +20,7 @@
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
     "method-override": "^3.0.0",
-    "mysql2": "^3.12.0",
-    "pdf-lib": "^1.17.1",
-    "pdfkit": "^0.16.0",
-    "pdfkit-table": "^0.1.99",
-    "pdfmake": "^0.2.18"
+    "mysql2": "^3.12.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
