--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "crypto-hash": "^3.1.0",
+    "csurf": "^1.10.0",
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "exceljs": "^4.4.0",
     "express": "^4.21.2",
+    "express-brute": "^1.0.1",
     "express-rate-limit": "^7.5.0",
     "express-session": "^1.18.1",
     "file-saver": "^2.0.5",
